# cbl-web-tool

./: .cspell.json  .gitignore  .pre-commit-config.yaml  .prettierrc  LICENSE.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
.pre-commit/: format_geojson.py  remove_kernelspec.py
angular-app/: .gitignore  .prettierrc  .stylelintrc.js  README.md  angular.json  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
angular-app/src/: index.html  mapbox-gl-geocoder.d.ts  styles.css
angular-app/src/app/: app.component.ts  app.config.ts  app.routes.ts  file-export.service.ts  service.ts
angular-app/src/app/cbl-table/: cbl-table.component.css  cbl-table.component.html  cbl-table.component.spec.ts  cbl-table.component.ts
angular-app/src/app/cbl-table/dropdown-menu/: dropdown-menu.component.html  dropdown-menu.component.ts
angular-app/src/app/custom-header/: custom-header.component.html  custom-header.component.spec.ts  custom-header.component.ts
angular-app/src/app/first-table/: first-table.component.css  first-table.component.html  first-table.component.spec.ts  first-table.component.ts
angular-app/src/app/first-table/custom-header/: custom-header.component.css  custom-header.component.html  custom-header.component.ts
angular-app/src/app/home/: home.component.css  home.component.html  home.component.spec.ts  home.component.ts  service.ts
angular-app/src/app/home/dropdown-menu/: dropdown-menu.component.html  dropdown-menu.component.spec.ts  dropdown-menu.component.ts
angular-app/src/app/home/file-upload/: file-upload.component.html  file-upload.component.ts
angular-app/src/app/home/image-slider/: image-slider.component.html  image-slider.component.spec.ts  image-slider.component.ts
angular-app/src/app/map-workflow/: map-workflow.component.css  map-workflow.component.html  map-workflow.component.spec.ts  map-workflow.component.ts
angular-app/src/app/mapbox-map/: custom-draw-button.ts  custom-info-button.ts  custom-toggle-button.ts  custom-trash-button.ts  mapbox-map.component.css  mapbox-map.component.html  mapbox-map.component.spec.ts  mapbox-map.component.ts  new-buliding-button.ts
angular-app/src/app/services/: auth.guard.ts  file-export.service.ts  first-table-guard.service.ts  geojson.service.spec.ts  geojson.service.ts  server.service.ts
angular-app/src/environments/: environment.ts.template
docs/: Data_Input_Formats.md  README.md
docs/example_data/: addresses_denver.csv  addresses_denver.json  addresses_denver.xlsx  buildings_denver_fema.geojson
docs/example_data/.ipynb_checkpoints/: convert json to csv-checkpoint.ipynb
docs/notebooks/: Building_Data_Sources.csv  Compare_Data_Sources_on_Buildings.ipynb  Create_Example_Data.ipynb  README.md  Scratch.ipynb  requirements-notebooks.txt
flask-app/: .gitignore  .pre-commit-config.yaml  README.md  app.py  config.py  locations_data.json  output.xlsx  pyproject.toml  testing.json
flask-app/myenv/: pyvenv.cfg
flask-app/myenv/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
flask-app/test_data/: large_test.json  small_test.json
flask-app/tests/: test_one.py
flask-app/utils/: check_data_quality.py  convert_file_to_dict.py  convert_file_to_dicts.py  generate_locations_list.py  geocode_addresses.py  location_error.py  merge_dicts.py  normalize_state.py  shp_to_geojson.py  ubid.py  update_dataset_links.py  update_quadkeys.py
flask_app/: .gitignore  README.md  app.py  config.py  ruff.toml
flask_app/tests/: test_imports.py  test_one.py
flask_app/tests/data/: large_test.json  testing.json
flask_app/utils/: __init__.py  check_data_quality.py  chunk.py  common.py  convert_file_to_dicts.py  generate_locations_list.py  geocode_addresses.py  geojson_helpers.py  location_error.py  normalize_address.py  normalize_state.py  open_street_map.py  shp_to_geojson.py  ubid.py  update_dataset_links.py  update_quadkeys.py
