[tool.poetry]
name = "cbl_web_tool"
version = "0.1.0"
description = ""
authors = ["Devin Brady <devin.brady@nrel.gov>", "Alex Swindler <axelstudios>", "Nicholas Long <nllong>", "Roger Braun <roger.braun@nrel.gov>", "Rahman Mian <rahman.mian@nrel.gov>"]
readme = "README.md"
# should probably rename utils to cbl_workflow, then place
# the utils in that folder.
packages = [
    { include = "flask_app" },
    { include = "flask_app/utils" }
]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"

flask = "^3.0.3"
flask-cors = "^4.0.1"
geopandas = "^1.0.1"
mercantile = "^1.2.1"
openpyxl = "^3.1.5"
# use https because SSH doesn't work on github actions.
pnnl-buildingid = { git = "https://github.com/seed-platform/buildingid.git", rev = "master" }
# cbl-workflow = { path = "../cbl-workflow", develop = true }
requests = "^2.31.0"
shapely = "^2.0.3"
street-address = "0.4.0"
usaddress = "0.5.13"
python-dotenv = "^1.0.0"
pytest = "8.3.5"
setuptools = "^78.1.0"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
nbformat = "^5.10.4"

[build-system]
# Need to provide the build system information for the package to be built
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
